<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Editar">


    <TextView
        android:id="@+id/EditLabelTit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tvEditTit"
        android:autofillHints="" />
    <EditText
        android:id="@+id/EditUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/editTextUser"
        android:inputType="textEmailAddress"
        android:enabled="false"
        android:autofillHints=""
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/EditPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/editTextPass"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditNombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/etRegNombre"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditApellido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/etRegApellido"
        android:inputType="text"
        android:autofillHints="" />


    <Button
        android:id="@+id/btnEditActualizar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:text="@string/btnEditar"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEditCancelar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="#0000ff"
        android:text="@string/btnCancelar"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>