<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:src="@mipmap/logo" />


    <EditText
        android:id="@+id/User"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/editTextUser"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:hint="@string/editTextPass"
        android:inputType="textPassword"
        android:autofillHints="" />


    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:text="@string/btnEntrar"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="#0000ff"
        android:text="@string/btnRegistrar"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>